# sawit

./: .gitignore  README.md  pyproject.toml  requirements.txt
palm-fruit-ripeness-classification-2/: README.dataset.txt  README.roboflow.txt
scripts/: download.sh  fix_dataset_classes.sh  predict.sh  prepare_full_train.py  train.sh
src/: __init__.py
src/mode_sawit/inference/: predict.py
src/mode_sawit/training/: train.py
src/mode_sawit/utils/: env.py
src/sawit_ai/: cli.py
src/sawit_ai/predict/: classify.py  detect.py
src/sawit_ai/train/: classify.py  detect.py
src/sawit_ai/utils/: env.py  logging.py  paths.py  yolo.py
